[gd_scene load_steps=19 format=3 uid="uid://cahpj0pxq8d0p"]

[ext_resource type="Script" uid="uid://dyne5a7dt2oqv" path="res://room.gd" id="1_8cv3p"]
[ext_resource type="Texture2D" uid="uid://cbyh0tqh05u5x" path="res://assets/textures/rough_plaster_brick_04_diff_1k.jpg" id="1_bltuw"]
[ext_resource type="AudioStream" uid="uid://3mpu8pe0gm6o" path="res://assets/sounds/zapsplat_industial_door_sliding_heavy_foundry_workshop_89174.mp3" id="4_01y1d"]
[ext_resource type="Texture2D" uid="uid://ctfo1eb5hwjar" path="res://assets/textures/rough_plaster_brick_04_rough_1k.jpg" id="5_8cv3p"]
[ext_resource type="Script" uid="uid://cwdlqsdhd0x8x" path="res://hallway.gd" id="5_x5k2b"]
[ext_resource type="AudioStream" uid="uid://vlk27pp7f6jp" path="res://assets/sounds/light-flick-on-100133.mp3" id="6_8cv3p"]
[ext_resource type="AudioStream" uid="uid://khrk2npkx7p2" path="res://assets/sounds/zapsplat_vehicles_bicycle_mountain_bike_pass_at_speed_on_road_002_110863.mp3" id="7_8cv3p"]

[sub_resource type="BoxMesh" id="BoxMesh_6bge0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8cv3p"]
albedo_texture = ExtResource("1_bltuw")
roughness_texture = ExtResource("5_8cv3p")
emission_enabled = true
emission_energy_multiplier = 9.26

[sub_resource type="BoxShape3D" id="BoxShape3D_iw8yf"]
size = Vector3(4.21214, 0.580078, 4.34485)

[sub_resource type="Animation" id="Animation_0f4jx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walls2/door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 1.5, -1.0001)]
}

[sub_resource type="Animation" id="Animation_6tcb1"]
resource_name = "open door"
length = 4.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walls2/door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.08),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2, 1.5, -1.0001), Vector3(2, 1.5, 0.404682)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i0wn2"]
_data = {
&"RESET": SubResource("Animation_0f4jx"),
&"open door": SubResource("Animation_6tcb1")
}

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_arvxw"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_46t0g"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_apde5"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_8gi88"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_01y1d"]
albedo_texture = ExtResource("1_bltuw")
roughness_texture = ExtResource("5_8cv3p")
emission_enabled = true
emission_energy_multiplier = 9.39

[node name="room" type="Node3D"]
script = ExtResource("1_8cv3p")

[node name="floring" type="StaticBody3D" parent="."]

[node name="floorM" type="MeshInstance3D" parent="floring"]
transform = Transform3D(4, 0, 0, 0, 0.1, 0, 0, 0, 4, 0, 0, 0)
mesh = SubResource("BoxMesh_6bge0")
surface_material_override/0 = SubResource("StandardMaterial3D_8cv3p")

[node name="floorC" type="CollisionShape3D" parent="floring"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0364761, -0.209961, 0.22522)
shape = SubResource("BoxShape3D_iw8yf")

[node name="ceiling" type="StaticBody3D" parent="."]

[node name="ceilingM" type="MeshInstance3D" parent="ceiling"]
transform = Transform3D(4, 0, 0, 0, 0.1, 0, 0, 0, 4, 0, 3, 0)
mesh = SubResource("BoxMesh_6bge0")

[node name="ceilingC" type="CollisionShape3D" parent="ceiling"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.17109, -0.000427246)
shape = SubResource("BoxShape3D_iw8yf")

[node name="opendoor" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i0wn2")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_01y1d")

[node name="walls2" type="Node3D" parent="."]

[node name="wall1" type="MeshInstance3D" parent="walls2"]
transform = Transform3D(12, 0, 0, 0, 3.1, 0, 0, 0, 0.1, 3.94581, 1.5, -2)
mesh = SubResource("BoxMesh_6bge0")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="walls2/wall1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls2/wall1/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_arvxw")

[node name="wall2" type="MeshInstance3D" parent="walls2"]
transform = Transform3D(4, 0, 0, 0, 3.1, 0, 0, 0, 0.1, 0, 1.5, 2)
mesh = SubResource("BoxMesh_6bge0")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="walls2/wall2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls2/wall2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_46t0g")

[node name="wall3" type="MeshInstance3D" parent="walls2"]
transform = Transform3D(0.1, 0, 0, 0, 3.1, 0, 0, 0, 4.1, -2, 1.5, 0)
mesh = SubResource("BoxMesh_6bge0")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="walls2/wall3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls2/wall3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_apde5")

[node name="wall4" type="MeshInstance3D" parent="walls2"]
transform = Transform3D(0.1, 0, 0, 0, 3.1, 0, 0, 0, 2.05, 2, 1.5, 1)
mesh = SubResource("BoxMesh_6bge0")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="walls2/wall4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls2/wall4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_8gi88")

[node name="door" type="MeshInstance3D" parent="walls2"]
transform = Transform3D(0.1, 0, 0, 0, 3.1, 0, 0, 0, 2.05, 2, 1.5, -1.0001)
mesh = SubResource("BoxMesh_6bge0")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="walls2/door"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls2/door/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_8gi88")

[node name="hallway" type="Node3D" parent="."]
script = ExtResource("5_x5k2b")

[node name="floring2" type="StaticBody3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.349541, 0, 0)

[node name="floorM" type="MeshInstance3D" parent="hallway/floring2"]
transform = Transform3D(8, 0, 0, 0, 0.1, 0, 0, 0, 1.4, 6.32716, 0.00730443, -1.26547)
mesh = SubResource("BoxMesh_6bge0")
surface_material_override/0 = SubResource("StandardMaterial3D_01y1d")

[node name="floorC" type="CollisionShape3D" parent="hallway/floring2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0364761, -0.209961, 0.22522)
shape = SubResource("BoxShape3D_iw8yf")

[node name="ceiling2" type="StaticBody3D" parent="hallway"]

[node name="ceilingM" type="MeshInstance3D" parent="hallway/ceiling2"]
transform = Transform3D(8, 0, 0, 0, 0.1, 0, 0, 0, 1.4, 6.00372, 3, -1.28914)
mesh = SubResource("BoxMesh_6bge0")

[node name="ceilingC" type="CollisionShape3D" parent="hallway/ceiling2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.17109, -0.000427246)
shape = SubResource("BoxShape3D_iw8yf")

[node name="wall6" type="MeshInstance3D" parent="hallway"]
transform = Transform3D(8, 0, 0, 0, 3.1, 0, 0, 0, 0.1, 5.95766, 1.5, -0.648688)
mesh = SubResource("BoxMesh_6bge0")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="hallway/wall6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hallway/wall6/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_46t0g")

[node name="OmniLight3D" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.42357, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D2" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.4934, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D3" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.39398, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D4" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.2091, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D5" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.10641, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D6" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.01019, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D7" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.09631, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D8" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.30844, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D9" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.78465, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D10" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.76985, 3.30025, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="OmniLight3D11" type="OmniLight3D" parent="hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.1906, 2.96142, -1.35939)
visible = false
light_energy = 0.2
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_size = 0.443
light_specular = 0.0
distance_fade_begin = 0.0
distance_fade_length = 475.45
omni_range = 1.078

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8cv3p")
volume_db = 6.853

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8cv3p")
volume_db = 23.524

[connection signal="openhall" from="." to="hallway" method="_on_room_openhall"]
